<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LogInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/encodesans_semibold"
        android:text="@string/login"
        android:textColor="@color/dark_gray"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sub_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/encodesans_regular"
        android:text="@string/sub_title_login"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/title_login"
        app:layout_constraintTop_toBottomOf="@+id/title_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/My.TextInputLayout.FilledBox.Padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:boxCollapsedPaddingTop="0dp"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/encodesans_medium"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/dark_gray"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/My.TextInputLayout.FilledBox.Padding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/password"
        app:boxCollapsedPaddingTop="0dp"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/encodesans_medium"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/dark_gray"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            app:hintAnimationEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/encodesans_regular"
        android:text="@string/change_password"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <ImageButton
        android:id="@id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_btn_oval"
        android:src="@drawable/ic_arrow_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>