<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_suitable_27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/encodesans_semibold"
        android:text="@string/app_name"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/tabs_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_indicator"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/bg_tab_indicator"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabPaddingEnd="20dp"
        app:tabPaddingStart="10dp"
        app:tabRippleColor="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/encodesans_medium"
        android:paddingBottom="1dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_btn_signup"
        android:fontFamily="@font/encodesans_medium"
        android:paddingBottom="1dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>